ow_kube_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwhisk
  namespace: openwhisk
spec:
  replicas: 1
  selector:
    matchLabels:
      name: openwhisk
  template:
    metadata:
      labels:
        name: openwhisk
    spec:
      containers:
        - name: whisk-controller
          image: apache/openwhisk-controller:3.0.0
