ow_kube_svc_invoker1.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwhisk-invoker1
  namespace: openwhisk
spec:
  selector:
    name: openwhisk-invoker1
  ports:
    - protocol: TCP
      port: 31002
      targetPort: 31001
